# PTMPSI

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: sync.yml
plugins/: README.md
plugins/CysPTM/: bundle_info.xml
ptmpsi/: __init__.py
ptmpsi-awsem/: README.md
ptmpsi-awsem/2d_sampling/: README.md  pmf_139-147_concatenated.txt  pmf_projection_concatenated_EP-Rg.ipynb  pmf_projection_concatenated_Qglobal-Rg.ipynb
ptmpsi-awsem/awsemmd-master/: fix_go-model.h  fix_qbias.cpp  fix_qbias.h  fragment_memory.cpp  fragment_memory.h  pair_excluded_volume.cpp  pair_excluded_volume.h  pair_go-contacts.cpp  pair_go-contacts.h
ptmpsi-awsem/clustering_analysis/: CalcD_permutation_max.py  Concatenate_PDB.ipynb  README.md  Zheng_func.py  preprocessing_concatenated_PDB.ipynb  seaborn_plot_cluster_map.ipynb
ptmpsi-awsem/umbrella_sampling/: Additional_example.ipynb  README.md  Umbrella-sampling_WHAM.ipynb  combine.ipynb  pmf_139-147.txt  pmf_4BEX_assembly.txt
ptmpsi/alphafold/: __init__.py  run_alphafold_frontier_232.py  run_singularity.py  run_singularity_232.py  templates.py
ptmpsi/constants/: __init__.py
ptmpsi/docking/: __init__.py
ptmpsi/exceptions/: __init__.py
ptmpsi/gromacs/: Untitled.ipynb  __init__.py  analysis.py  templates.py  utils.py
ptmpsi/io/: __init__.py
ptmpsi/math/: __init__.py
ptmpsi/nwchem/: __init__.py  bonded.py  bonds_and_angles.py  qmmm.py  reader.py  templates.py
ptmpsi/polymers/: __init__.py  nylon4.py  nylon6.py  tools.py
ptmpsi/protein/: __init__.py  mutate.py  tools.py
ptmpsi/residues/: __init__.py  aminoacids.py  nonstandard.py  (+2 more)
tutorials/: Tutorial.ipynb  Tutorial_frontier.ipynb  Tutorial_lcf.ipynb  Tutorial_polaris.ipynb  start_jupyter_server.sh
(+171 files in other folders)
